--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>  
-        Hola Estudiante este es mi sitio Web sigueme
+        Hola amigas y amigos este es mi sitio Web sigueme
     </p>
 </body>
 </html>
